<resources>
    <string name="app_name">Для Насти</string>
    <string name="string_add_new_alarm">Создать</string>
    <string name="text_delete">Delete button</string>
    <string name="description_clock">Clock image</string>
    <string name="string_default_alarm_time">00:00</string>
    <string name="string_label_time">Время</string>
    <string name="string_label_days">Дни повтора</string>
    <string name="string_label_music">Мелодия</string>
    <string name="string_label_picture">Изображение</string>
    <string name="string_button_picture">Утренняя мотивашка</string>
    <string name="string_days_label">Дни:</string>
    <string name="string_days_button_default">Каждый день</string>
    <string name="string_menu_item_1">Мелодия по умолчанию</string>
    <string name="string_setalarm_submit">ОК</string>
    <string name="string_setalarm_cancel">Отмена</string>
    <string name="string_button_close">Закрыть</string>
    <string name="string_days_note">Примечание: если не отмечен ни один день, будильник срабатывает каждый день.</string>
</resources>
