<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:id="@+id/textView_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_days_label"
        android:textSize="30sp" />

    <GridView
        android:id="@+id/gridView_days_listing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:numColumns="10"
        android:layout_weight="20" />

    <Button
        android:id="@+id/button_days_set_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_days_button_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:dividerPadding="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/string_label_days"
            app:srcCompat="@drawable/ic_monday_icon" />

        <ImageButton
            android:id="@+id/imageButton_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/string_label_days"
            app:srcCompat="@drawable/ic_tuesday_icon" />

        <ImageButton
            android:id="@+id/imageButton_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/string_label_days"
            app:srcCompat="@drawable/ic_wednesday_icon" />

        <ImageButton
            android:id="@+id/imageButton_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/string_label_days"
            app:srcCompat="@drawable/ic_thursday_icon" />

        <ImageButton
            android:id="@+id/imageButton_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/string_label_days"
            app:srcCompat="@drawable/ic_friday_icon" />

        <ImageButton
            android:id="@+id/imageButton_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/string_label_days"
            app:srcCompat="@drawable/ic_saturday_icon" />

        <ImageButton
            android:id="@+id/imageButton_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/string_label_days"
            app:srcCompat="@drawable/ic_sunday_icon" />
    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_days_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_setalarm_submit"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_days_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/string_days_note" />
</LinearLayout>